syntax = "proto3";

package interfaces;

message PingMessage {
  string greeting = 1;
}
service Ping {
  rpc SayHello(PingMessage) returns (PingMessage) {}
}